--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,13 @@
     <string name="home_like_MV_con">特写西装 完美MV 榜单前十</string>
     <string name="home_like_MV_number">13145看过</string>
     <string name="home_scroll_end">已经滑动到底了。。。</string>
+    <string name="order_title">支付订单</string>
+    <string name="order_rent_type1">日租</string>
+    <string name="order_rent_type2">三日租</string>
+    <string name="order_rent_type3">周租</string>
+    <string name="order_pay_wx">微信支付</string>
+    <string name="order_pay_code">扫码支付</string>
+    <string name="order_pay_ali">支付宝支付</string>
+    <string name="order_pay_money">确认支付：￥156</string>
 
 </resources>
